--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cron": "^2.3.1",
     "date-fns-tz": "^1.3.7",
     "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "escpos": "^3.0.0-alpha.6",
     "escpos-usb": "^3.0.0-alpha.4",
